feat: update border radius values

--- a/src/assets/scss/_component-container.scss
+++ b/src/assets/scss/_component-container.scss
@@ -2,7 +2,7 @@
 
 .fd-component-container {
   margin-top: var(--spacing-07);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--ui-border-04);
   border-top-left-radius: 0.3em;
   border-top-right-radius: 0.3em;
   padding: var(--spacing-05);
