--- a/src/components/css/dropdown.css
+++ b/src/components/css/dropdown.css
@@ -38,7 +38,7 @@
   list-style: none;
   background-color: var(--fc-dropdown-menu-color-background, var(--ui-elevation-background-03));
   background-clip: padding-box;
-  border: 1px solid var(--fc-dropdown-menu-color-border, var(--ui-border-color));
+  border: 1px solid var(--fc-dropdown-menu-color-border, var(--ui-border-04));
   border-radius: .25rem; /* CHANGE */
   box-shadow: var(--fc-dropdown-menu-shadow, var(--ui-elevation-shadow-03));
 }
