--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -11,7 +11,7 @@
   max-height: calc(100vh - 76px);
   overflow-y: auto;
   background: var(--body-bg-color);
-  border-right: 1px solid var(--border-color);
+  border-right: 1px solid var(--ui-border-03);
 
   --fc-nav-anchor-color-link: var(--high-emphasis-text-color)
 }
