--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -6,7 +6,7 @@ table {
 }
 
 table tr {
-    border-top: 1px solid var(--ui-border-color);
+    border-top: 1px solid var(--ui-border-04);
     background-color: var(--ui-background-02);
     margin: 0;
     padding: 0;
@@ -14,7 +14,7 @@ table tr {
 
 table tr td,
 table tr th {
-    border: 1px solid var(--ui-border-color);
+    border: 1px solid var(--ui-border-04);
     margin: 0;
     padding: 6px 13px;
 }
