--- a/src/components/css/progress.css
+++ b/src/components/css/progress.css
@@ -2,20 +2,20 @@
   appearance: none;
   background: var(--ui-background-03);
   border: 0;
-  border-radius: var(--ui-border-radius);
+  border-radius: var(--ui-border-radius-01);
   color: var(--primary-color);
   position: relative;
   width: 100%;
 }
 .fc-progress::-webkit-progress-bar {
   background: transparent;
-  border-radius: var(--ui-border-radius);
+  border-radius: var(--ui-border-radius-01);
 }
 .fc-progress::-webkit-progress-value {
   background: var(--primary-color);
-  border-radius: var(--ui-border-radius);
+  border-radius: var(--ui-border-radius-01);
 }
 .fc-progress::-moz-progress-bar {
   background: var(--primary-color);
-  border-radius: var(--ui-border-radius);
+  border-radius: var(--ui-border-radius-01);
 }
