--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -83,7 +83,7 @@ img:not([alt]) {
 
 /* The Thematic Break (Horizontal Rule) element styles */
 hr {
-  border-color: var(--border-color);
+  border-top: 1px solid var(--ui-border-03);
   margin: 0;
   border-width: 1px 0 0;
 }
@@ -93,8 +93,8 @@ code:not([class]) {
   word-break: break-word;
   hyphens: manual;
   background-color: var(--ui-background-03);
-  border-radius: var(--ui-border-radius);
-  border: 1px solid var(--ui-background-04);
+  border-radius: var(--ui-border-radius-01);
+  border: 1px solid var(--ui-border-04);
   padding-left: calc(var(--spacing-05) / 2);
   padding-right: calc(var(--spacing-05) / 2);
 }
