--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -1,32 +1,34 @@
 :root {
-  // main colors
+  // Main colors
   @each $color, $value in $global-colors {
     --#{$color}-color: #{$value};
   }
-  // spacings
+  // Spacings
   @each $spacing, $value in $spacings {
     --spacing-#{$spacing}: #{$value};
   }
-  // fonts
+  // Fonts
   @each $font, $value in $font-families {
     --font-#{$font}: #{$value};
   }
-  // typography
+  // Typography
   @each $type, $value in $type-scale {
     --#{$type}: #{$value};
   }
-  // line heights
+  // Line heights
   @each $line-height, $value in $line-heights {
     --#{$line-height}: #{$value};
   }
-  // components
+  // UI colors
   @each $ui-style, $value in $ui-styles {
     --#{$ui-style}: #{$value};
   }
-
-  // Elevations
+  // UI elevations
   @each $elevation, $value in $ui-elevations {
     --#{$elevation}: #{$value};
+  }
+  @each $border-radius, $value in $ui-border-radius {
+    --#{$border-radius}: #{$value};
   }
 }
 
