--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -1,24 +1,30 @@
 table {
-    margin: 16px 0;
-    line-height: 24px;
-    padding: 0;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+table thead {
+  background-color: var(--ui-background-02);
+}
+
+table tbody {
+  background-color: var(--ui-background-01);
 }
 
 table tr {
-    border-top: 1px solid var(--ui-border-04);
-    background-color: var(--ui-background-02);
-    margin: 0;
-    padding: 0;
+  border-top: 1px solid var(--ui-border-03);
+  margin: 0;
+  padding: 0;
 }
 
 table tr td,
 table tr th {
-    border: 1px solid var(--ui-border-04);
-    margin: 0;
-    padding: 6px 13px;
+  border: 1px solid var(--ui-border-03);
+  margin: 0;
+  padding: 6px 13px;
 }
 
 table code {
-    word-break: normal;
+  word-break: normal;
 }
