--- a/src/assets/scss/_prism.scss
+++ b/src/assets/scss/_prism.scss
@@ -31,7 +31,7 @@
    padding: 1em;
    margin: .5em 0;
    overflow: auto;
-   border-radius: 0.3em;
+   border-radius: var(--ui-border-radius-01);
  }
  
  :not(pre) > code[class*="language-"],
