--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -4,6 +4,9 @@ table {
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
+  border-top: 1px solid var(--ui-border-02);
+  border-right: 1px solid var(--ui-border-02);
+  border-left: 1px solid var(--ui-border-02);
 }
 
 table thead {
