--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -39,7 +39,7 @@ body {
   min-height: 100vh;
   background: var(--body-bg-color);
   color: var(--body-color);
-  font-size: var(--text-md);
+  font-size: var(--text-03);
   font-family: var(--font-secondary);
   text-rendering: optimizeSpeed;
   line-height: 1.5;
