--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,42 +1,42 @@
 h1,
-.fu-text-xxxl {
+.fu-text-07 {
   font-family: var(--font-primary);
-  font-size: var(--text-xxxl);
+  font-size: var(--text-07);
   line-height: var(--heading-line-height);
 }
 
 h2,
-.fu-text-xxl {
+.fu-text-06 {
   font-family: var(--font-primary);
-  font-size: var(--text-xxl);
+  font-size: var(--text-06);
   line-height: var(--heading-line-height);
 }
 
 h3,
-.fu-text-xl {
+.fu-text-05 {
   font-family: var(--font-primary);
-  font-size: var(--text-xl);
+  font-size: var(--text-05);
   line-height: var(--heading-line-height);
 }
 
 h4,
-.fu-text-lg {
+.fu-text-04 {
   font-family: var(--font-primary);
-  font-size: var(--text-lg);
+  font-size: var(--text-04);
   line-height: var(--heading-line-height);
 }
 
 h5,
-.fu-text-md {
+.fu-text-03 {
   font-family: var(--font-primary);
-  font-size: var(--text-md);
+  font-size: var(--text-03);
   line-height: var(--heading-line-height);
 }
 
 h6,
-.fu-text-sm {
+.fu-text-02 {
   font-family: var(--font-primary);
-  font-size: var(--text-md);
+  font-size: var(--text-03);
   line-height: var(--heading-line-height);
 }
 
