--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -50,7 +50,7 @@
       </main>
 
       <div class="[ fd-sidebar ] [ fu-spacing-pt-09 fu-spacing-pb-09 ]">
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Getting started</h2>
+        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Getting started</h2>
         <nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-spacing-ml-06 fu-spacing-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.gettingStarted -%}
@@ -60,7 +60,7 @@
             {%- endfor -%}
           </ul>
         </nav>
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Custom elements</h2>
+        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Custom elements</h2>
         <nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-spacing-ml-06 fu-spacing-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.customElements -%}
@@ -70,7 +70,7 @@
             {%- endfor -%}
           </ul>
         </nav>
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">HTML</h2>
+        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">HTML</h2>
         <nav class="[ fc-nav ] [ fu-spacing-ml-06 fu-spacing-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.html -%}
