--- a/src/components/css/form-select.css
+++ b/src/components/css/form-select.css
@@ -46,7 +46,7 @@
 
 .fc-form__help-text {
   margin-top: var(--spacing-01);
-  font-size: var(--text-xs);
+  font-size: var(--text-01);
   font-weight: 400;
 }
 
