--- a/src/components/css/form-textarea.css
+++ b/src/components/css/form-textarea.css
@@ -38,6 +38,6 @@
 .fc-form__help-text {
   /* THIS NEEDS TO BE A MIXIN */
   margin-top: var(--spacing-01);
-  font-size: var(--text-xs);
+  font-size: var(--text-01);
   font-weight: 400;
 }
