--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -90,17 +90,25 @@ $font-families: (
 
 // base values
 $text-base-size: 1rem;
+$text-01: $text-base-size * 0.75;
+$text-02: $text-base-size * 0.875;
+$text-03: $text-base-size;
+$text-04: $text-base-size * 1.25;
+$text-05: $text-base-size * 1.5;
+$text-06: $text-base-size * 2;
+$text-07: $text-base-size * 3.75;
+$text-08: $text-base-size * 5;
 
 // type scale
 $type-scale: (
-  'text-xs': calc(#{$text-base-size} * 0.75),
-  'text-sm': calc(#{$text-base-size} * 0.875),
-  'text-md': $text-base-size,
-  'text-lg': calc(#{$text-base-size} * 1.25),
-  'text-xl': calc(#{$text-base-size} * 1.5),
-  'text-xxl': calc(#{$text-base-size} * 2),
-  'text-xxxl': calc(#{$text-base-size} * 3.75),
-  'text-xxxxl': calc(#{$text-base-size} * 5)
+  '01': $text-01,
+  '02': $text-02,
+  '03': $text-03,
+  '04': $text-04,
+  '05': $text-05,
+  '06': $text-06,
+  '07': $text-07,
+  '08': $text-08
 );
 
 // line heights
