--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -59,7 +59,6 @@ $secondary: $secondary-50 !default;
 
 $body-bg: $white !default;
 $body-color: $gray-100 !default;
-$border-color: rgba($black, .1);
 $colors: (
   'primary': $primary,
   'primary-light': tint($primary, 20%),
@@ -72,7 +71,6 @@ $colors: (
   'high-emphasis-text': rgba($body-color, .87),
   'medium-emphasis-text': rgba($body-color, .6),
   'low-emphasis-text': rgba($body-color, .38),
-  'border': $border-color
 );
 
 $global-colors: map-merge($colors, $grays);
@@ -98,8 +96,6 @@ $text-05: $text-base-size * 1.5;
 $text-06: $text-base-size * 2;
 $text-07: $text-base-size * 3.75;
 $text-08: $text-base-size * 5;
-
-// type scale
 $type-scale: (
   '01': $text-01,
   '02': $text-02,
@@ -109,6 +105,16 @@ $type-scale: (
   '06': $text-06,
   '07': $text-07,
   '08': $text-08
+);
+
+// States
+$state-invalid: #fa4d56; // change this!
+$state-valid: #42be65; // change this!
+$state-focus: shade($primary, 20%); // change this!
+$state-colors: (
+  'invalid': $state-invalid,
+  'valid': $state-valid,
+  'focus': $state-focus
 );
 
 // line heights
