--- a/src/scss/ficus-globals.scss
+++ b/src/scss/ficus-globals.scss
@@ -1,5 +1,5 @@
-@import 'functions';
-@import 'settings';
-@import 'root';
-@import 'reset';
-@import 'typography';
+
+@use 'settings';
+@use 'root';
+@use 'reset';
+@use 'typography';
