--- a/src/components/css/form-textarea.css
+++ b/src/components/css/form-textarea.css
@@ -15,7 +15,7 @@
   background: var(--fc-form-textarea-color-background, var(--ui-background-01));
   border: 1px solid var(--fc-form-textarea-color-border, var(--ui-border-04));
   border-radius: var(--fc-form-textarea-radius, var(--ui-border-radius-01));
-  padding: var(--spacing-05);
+  padding: var(--spacing-04) var(--spacing-05);
   color: var(--body-color); /* CHANGE */
   outline: 2px solid transparent;
 }
