feat: add form label and help text styles

--- a/src/components/css/form-help-text.css
+++ b/src/components/css/form-help-text.css
@@ -1,6 +1,6 @@
 .fc-form__help-text {
-  margin-top: calc(var(--form-spacing) / 4);
-  font-size: 80%;
+  /* THIS NEEDS TO BE A MIXIN */
+  margin-top: var(--spacing-01);
+  font-size: var(--text-01);
   font-weight: 400;
-  color: #767676
 }
