--- a/src/components/css/form-label.css
+++ b/src/components/css/form-label.css
@@ -6,24 +6,19 @@
 .fc-form__label.fc-form__label--block {
   display: block;
 }
-
 /* reverse label */
 .fc-form__input--reverse .fc-form__label {
   margin-bottom: 0;
   margin-left: calc(var(--form-spacing) / 2);
 }
-
-[label][required] label.fc-form__label::after,
-form-label[required] label.fc-form__label::after {
+fc-form-label[required] label.fc-form__label::after {
   content: "*";
-  color: var(--form-invalid-color-rgb);
-  margin-left: 5px;
+  color: var(--state-required);
+  margin-left: var(--spacing-02);
 }
-
 label[for] {
   cursor: pointer;
 }
-
 .fc-form__label:empty {
   display: none;
 }
