--- a/src/css/ficus-globals.css
+++ b/src/css/ficus-globals.css
@@ -22,6 +22,7 @@
   --gray-80-color: #3e3e3e;
   --gray-90-color: #272727;
   --gray-100-color: #121212;
+  --state-required: #fa4d56;
   --state-invalid: #fa4d56;
   --state-valid: #42be65;
   --state-focus: #43b6b7;
