--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -27,9 +27,11 @@
       {{css | safe}}
     </style>
     <!-- component css END -->
+    {% cssPath cssFile | safe %}
   </head>
-  <body style="overflow: hidden;">
+  <body>
     <div class="fd-main-layout">
+
       <header class="fc-navbar">
         <section class="fc-navbar__section">
           <img id="ficus-logo" src="../assets/img/ficus-logo.svg" width="150" alt="FicusJS Components">
@@ -45,42 +47,30 @@
         </section>
       </header>
 
-      <main class="fc-frame">
-        <iframe id="comp-frame" src="components/" frameborder="0" name="comp-frame"></iframe>
+      <div class="[ fd-sidebar ] [ fu-spacing-pt-09 fu-spacing-pb-09 ]">
+        {% include "navs/getting-started.njk" %}
+        {% include "navs/guidelines.njk" %}
+        {% include "navs/forms.njk" %}
+        {% include "navs/custom-elements.njk" %}
+        {% include "navs/html.njk" %}
+      </div>
+
+      <main class="[ fd-doc-layout ] [ fu-layout-pl-04 fu-layout-pr-04 fu-layout-pt-06 fu-layout-pb-06 fu-flow ]">
+        <article class="[ fd-doc-article ] [ fu-flow ]">
+          {{ content | safe }}
+          {% bootstrap modulePath | safe %}
+          {% scriptPath demoScript | safe %}
+        </article>
+        {% if content | toc %}
+        <aside class="sticky-aside">
+          <div class="fd-toc">
+            <span>Table of contents</span>
+            {{ content | toc| safe }}
+          </div>
+        </aside>
+        {% endif %}
       </main>
 
-      <div class="[ fd-sidebar ] [ fu-spacing-pt-09 fu-spacing-pb-09 ]">
-        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Getting started</h2>
-        <nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-spacing-ml-06 fu-spacing-mr-06 ]">
-          <ul class="fc-nav__list">
-            {%- for post in collections.gettingStarted -%}
-              <li>
-                <a href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
-              </li>
-            {%- endfor -%}
-          </ul>
-        </nav>
-        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Custom elements</h2>
-        <nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-spacing-ml-06 fu-spacing-mr-06 ]">
-          <ul class="fc-nav__list">
-            {%- for post in collections.customElements -%}
-              <li>
-                <a href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
-              </li>
-            {%- endfor -%}
-          </ul>
-        </nav>
-        <h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">HTML</h2>
-        <nav class="[ fc-nav ] [ fu-spacing-ml-06 fu-spacing-mr-06 ]">
-          <ul class="fc-nav__list">
-            {%- for post in collections.html -%}
-              <li>
-                <a href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
-              </li>
-            {%- endfor -%}
-          </ul>
-        </nav>
-      </div>
     </div>
     <script type="module" src="assets/js/theme.js"></script>
   </body>
